CREATE TABLE IF NOT EXISTS  "inventory_closing_stock"
(
    "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "closing_time" timestamp(6) with time zone NOT NULL,
    "warehouse_id" varchar NOT NULL,
    "material_id" varchar NOT NULL,
    "grade" varchar NOT NULL,
    "quantity" int DEFAULT 0
);
CREATE INDEX "ix_inventory_closing_stock_warehouse_id_closing_time" ON "inventory_closing_stock" ("warehouse_id", "closing_time" DESC);
COMMENT ON TABLE "inventory_closing_stock" IS '기말 재고 수량';
COMMENT ON COLUMN "inventory_closing_stock"."id" IS '고유 식별자';
COMMENT ON COLUMN "inventory_closing_stock"."closing_time" IS '기말 마감 일시';
COMMENT ON COLUMN "inventory_closing_stock"."warehouse_id" IS '창고 ID';
COMMENT ON COLUMN "inventory_closing_stock"."material_id" IS '자재 ID';
COMMENT ON COLUMN "inventory_closing_stock"."grade" IS '자재 등급';
COMMENT ON COLUMN "inventory_closing_stock"."quantity" IS '기말 재고 수량';


CREATE TABLE IF NOT EXISTS  "inventory_costing"
(
    "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "costing_time" timestamp NOT NULL,
    "method" varchar NOT NULL,
    "start_date" date NOT NULL,
    "end_date" date NOT NULL,
    "warehouse_id" varchar NOT NULL,
    "material_id" varchar NOT NULL,
    "grade" varchar NOT NULL,
    "currency" char(3) NOT NULL,
    "unit_cost" NUMERIC(38,2) NOT NULL,
    "is_active" char check (is_active = ANY (ARRAY ['N'::bpchar, 'Y'::bpchar]))
);
CREATE INDEX "ix_inventory_costing_costing_time" ON "inventory_costing" ("costing_time" DESC);
COMMENT ON TABLE "inventory_costing" IS '자재별 재고 원가 계산';
COMMENT ON COLUMN "inventory_costing"."id" IS '재고원가계산 ID';
COMMENT ON COLUMN "inventory_costing"."costing_time" IS '원가 계산 일시';
COMMENT ON COLUMN "inventory_costing"."method" IS '재고 원가 결정 방법';
COMMENT ON COLUMN "inventory_costing"."start_date" IS '재고원가계산 시작 기준일';
COMMENT ON COLUMN "inventory_costing"."end_date" IS '재고원가계산 종료 기준일';
COMMENT ON COLUMN "inventory_costing"."warehouse_id" IS 'CDC 창고 ID';
COMMENT ON COLUMN "inventory_costing"."material_id" IS '자재 ID';
COMMENT ON COLUMN "inventory_costing"."grade" IS '자재 등급';
COMMENT ON COLUMN "inventory_costing"."currency" IS '통화 코드 (예: USD)';
COMMENT ON COLUMN "inventory_costing"."unit_cost" IS '자재 원가';
COMMENT ON COLUMN "inventory_costing"."is_active" IS '레코드 활성화 여부';

CREATE TABLE IF NOT EXISTS  "inventory_valuation"
(
    "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "costing_id" bigint,
    "closing_time" timestamp(6) with time zone NOT NULL,
    "warehouse_id" varchar NOT NULL,
    "material_id" varchar NOT NULL,
    "grade" varchar NOT NULL,
    "currency" char(3) NOT NULL,
    "unit_cost" NUMERIC(38,2) NOT NULL,
    "quantity" int NOT NULL DEFAULT 0,
    "total_value" NUMERIC(38,2) NOT NULL,
    "is_active" char check (is_active = ANY (ARRAY ['N'::bpchar, 'Y'::bpchar]))
);
CREATE INDEX "ix_inventory_valuation_closing_time" ON "inventory_valuation" ("closing_time" DESC);
COMMENT ON TABLE "inventory_valuation" IS '기말 자재별 전체 재고자산가치평가';
COMMENT ON COLUMN "inventory_valuation"."id" IS '재고자산평가 ID';
COMMENT ON COLUMN "inventory_valuation"."costing_id" IS '재고원가계산 ID';
COMMENT ON COLUMN "inventory_valuation"."closing_time" IS '기말 평가 일시';
COMMENT ON COLUMN "inventory_valuation"."warehouse_id" IS 'CDC 창고 ID';
COMMENT ON COLUMN "inventory_valuation"."material_id" IS '자재 ID';
COMMENT ON COLUMN "inventory_valuation"."grade" IS '자재 등급';
COMMENT ON COLUMN "inventory_valuation"."currency" IS '통화 코드 (예: USD)';
COMMENT ON COLUMN "inventory_valuation"."unit_cost" IS '자재 원가';
COMMENT ON COLUMN "inventory_valuation"."quantity" IS '자재 수량';
COMMENT ON COLUMN "inventory_valuation"."total_value" IS '자산 평가액';
COMMENT ON COLUMN "inventory_valuation"."is_active" IS '레코드 활성화 여부';


CREATE TABLE IF NOT EXISTS  "inventory_aging_loss_rule"
(
    "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "material_id" varchar NOT NULL,
    "rule_name" varchar,
    "grade" varchar NOT NULL,
    "min_aging_days" int NOT NULL,
    "max_aging_days" int,
    "adjustment_method" varchar NOT NULL,
    "adjustment_value" NUMERIC(38,2) NOT NULL,
    "currency" char(3) NOT NULL,
    "create_user" varchar(32) NOT NULL,
    "create_time" timestamp(6) with time zone DEFAULT (now()),
    "update_user" varchar(32) NOT NULL,
    "update_time" timestamp(6) with time zone DEFAULT (now()),
    "is_active" char check (is_active = ANY (ARRAY ['N'::bpchar, 'Y'::bpchar]))
);
COMMENT ON TABLE "inventory_aging_loss_rule" IS '보유 기간에 따른 재고자산가치평가 규칙';
COMMENT ON COLUMN "inventory_aging_loss_rule"."id" IS '고유 식별자';
COMMENT ON COLUMN "inventory_aging_loss_rule"."material_id" IS '자재 ID';
COMMENT ON COLUMN "inventory_aging_loss_rule"."rule_name" IS '규칙 이름';
COMMENT ON COLUMN "inventory_aging_loss_rule"."grade" IS '자재 등급';
COMMENT ON COLUMN "inventory_aging_loss_rule"."min_aging_days" IS '보유기간 범위 최소값';
COMMENT ON COLUMN "inventory_aging_loss_rule"."max_aging_days" IS '보유기간 범위 최대값';
COMMENT ON COLUMN "inventory_aging_loss_rule"."adjustment_method" IS '조정 방식 (예: Percentage, Fixed)';
COMMENT ON COLUMN "inventory_aging_loss_rule"."adjustment_value" IS '가격 조정 값 (정률 또는 정액)';
COMMENT ON COLUMN "inventory_aging_loss_rule"."currency" IS '통화 코드';
COMMENT ON COLUMN "inventory_aging_loss_rule"."is_active" IS '레코드 활성화 여부';
COMMENT ON COLUMN "inventory_aging_loss_rule"."create_user" IS '생성 사용자';
COMMENT ON COLUMN "inventory_aging_loss_rule"."create_time" IS '생성 일시';
COMMENT ON COLUMN "inventory_aging_loss_rule"."update_user" IS '수정 사용자';
COMMENT ON COLUMN "inventory_aging_loss_rule"."update_time" IS '수정 일시';

CREATE TABLE IF NOT EXISTS  "inventory_aging_loss_rule_history"
(
    "audit_key" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "rule_id" bigint,
    "material_id" varchar NOT NULL,
    "grade" varchar NOT NULL,
    "min_aging_days" int NOT NULL,
    "max_aging_days" int,
    "adjustment_method" varchar NOT NULL,
    "adjustment_value" NUMERIC(38,2) NOT NULL,
    "currency" char(3) NOT NULL,
    "update_user" varchar(32) NOT NULL,
    "update_time" timestamp(6) with time zone DEFAULT (now()),
    "is_active" char check (is_active = ANY (ARRAY ['N'::bpchar, 'Y'::bpchar]))
);
COMMENT ON TABLE "inventory_aging_loss_rule_history" IS '보유 기간에 따른 재고자산가치평가 규칙 변경(History)';
COMMENT ON COLUMN "inventory_aging_loss_rule_history"."audit_key" IS '변경 이력 레코드 식별자';
COMMENT ON COLUMN "inventory_aging_loss_rule_history"."rule_id" IS '변경 전 Aging 규칙 ID (고유 식별자)';
COMMENT ON COLUMN "inventory_aging_loss_rule_history"."material_id" IS '변경 전 자재 ID';
COMMENT ON COLUMN "inventory_aging_loss_rule_history"."grade" IS '변경 전 자재 등급';
COMMENT ON COLUMN "inventory_aging_loss_rule_history"."min_aging_days" IS '변경 전 보유기간 범위 최소값';
COMMENT ON COLUMN "inventory_aging_loss_rule_history"."max_aging_days" IS '변경 전 보유기간 범위 최대값';
COMMENT ON COLUMN "inventory_aging_loss_rule_history"."adjustment_method" IS '변경 전 조정 방식 (예: Percentage, Fixed)';
COMMENT ON COLUMN "inventory_aging_loss_rule_history"."adjustment_value" IS '변경 전 가격 조정 값 (정률 또는 정액)';
COMMENT ON COLUMN "inventory_aging_loss_rule_history"."currency" IS '변경전 통화 코드';
COMMENT ON COLUMN "inventory_aging_loss_rule_history"."is_active" IS '변경 전 레코드 활성화 여부';
COMMENT ON COLUMN "inventory_aging_loss_rule_history"."update_user" IS '변경 전 수정 사용자';
COMMENT ON COLUMN "inventory_aging_loss_rule_history"."update_time" IS '변경 전 수정 일시';

CREATE TABLE IF NOT EXISTS  "inventory_aging_loss_snapshot"
(
    "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "rule_id" bigint,
    "closing_time" timestamp NOT NULL,
    "warehouse_id" varchar NOT NULL,
    "material_id" varchar NOT NULL,
    "grade" varchar NOT NULL,
    "min_aging_days" int NOT NULL,
    "max_aging_days" int,
    "currency" char(3) NOT NULL,
    "original_price" NUMERIC(38,2) NOT NULL,
    "adjustment_method" varchar NOT NULL,
    "adjustment_value" NUMERIC(38,2) NOT NULL,
    "adjusted_price" NUMERIC(38,2) NOT NULL,
    "quantity" int NOT NULL,
    "total_original_value" NUMERIC(38,2) NOT NULL,
    "total_adjusted_value" NUMERIC(38,2) NOT NULL,
    "is_active" char check (is_active = ANY (ARRAY ['N'::bpchar, 'Y'::bpchar]))
);
CREATE INDEX "ix_inventory_aging_loss_snapshot_closing_time" ON "inventory_aging_loss_snapshot" ("closing_time" DESC);
COMMENT ON TABLE "inventory_aging_loss_snapshot" IS '보유 기간에 따른 기말 재고자산가치평가 결과';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."id" IS '고유 식별자';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."rule_id" IS 'Aging 규칙 ID';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."closing_time" IS '기말 평가 일시';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."warehouse_id" IS '창고 ID';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."material_id" IS '자재 ID';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."grade" IS '자재 등급';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."min_aging_days" IS '보유기간 범위 최소값';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."max_aging_days" IS '보유기간 범위 최대값';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."currency" IS '통화 코드';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."original_price" IS '기존 자재 원가(inventory_costing)';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."adjustment_method" IS '조정 방식 (예: Percentage, Fixed)';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."adjustment_value" IS '가격 조정 값 (정률 또는 정액)';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."adjusted_price" IS '감가된 원가';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."quantity" IS '자재 수량';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."total_original_value" IS '감가전 자산 평가액';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."total_adjusted_value" IS '감가된 자산 평가액';
COMMENT ON COLUMN "inventory_aging_loss_snapshot"."is_active" IS '레코드 활성화 여부';